hphp/test/zend/good/Zend/tests/errmsg_031.php.expectf

Fatal error: unknown class parent in %s/errmsg_031.php on line 3
